--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
       <h4>Your Work</h4>
       <p><em>Code your answer in <code>main.js</code>. You may need to add extra html elements inside of the <code>div.answer-box</code>.</em></p>
       <div class="answer-box">
-        <input type="text">
+      <input type="text" class="listMaker3" placeholder="Input text here" autofocus/>
         <p>guest list</p>
-        <ul class="guest-list"></ul>
+        <ul class="guest-list-bonus"></ul>
       </div>
     </div>
   </div>
